--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
   <title>Kachatad Pantusen</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<div class="topnav">
+  <a href="mailto:kachpantusen@gmail.com">email</a>
+  <a href="cv.html" target="_blank">cv</a>
+  <a href="project.html" target="_blank">projects</a>
+</div>
 <body>
+
   <main>
-    <img src="img/profile.jpg" alt="Profile Photo" class="profile" height = "300px" width = "300px">
-    <h1>Kachatad Pantusen</h1>
-    <p class="subtitle">Senior at Carnegie Mellon University</p>
+      <img src="img/profile.jpg" alt="Profile Photo" class="profile">
+      <h1>Kachatad Pantusen</h1>
+      <p class="subtitle">Senior at Carnegie Mellon University</p>
 
-    <section class="links">
-      <a href="mailto:kachpantusen@gmail.com">email</a>
-      <a href="cv.html" target="_blank">cv</a>
-      <a href="project.html" target="_blank">projects</a>
-    </section>
-
-    <section class="bio">
-      <p>
-        I'm a Senior at Carnegie Mellon University studying Information Systems, with an additional major in Statistics.
-      </p>
-    </section>
+      <section class="bio">
+        <p>
+          I'm a Senior at Carnegie Mellon University studying Information Systems, with an additional major in Statistics.
+        </p>
+      </section>
   </main>
 </body>
 </html>
