--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <div class="topnav">
-  <a href="mailto:kachpantusen@gmail.com">email</a>
-  <a href="cv.html" target="_blank">cv</a>
-  <a href="project.html" target="_blank">projects</a>
+  <!-- <a href="mailto:kachpantusen@gmail.com">email</a> -->
+  <a href="index.html" class="active">home</a>
+  <a href="cv.html">cv</a>
+  <a href="project.html">projects</a>
 </div>
 <body>
 
   <main>
       <img src="img/profile.jpg" alt="Profile Photo" class="profile">
-      <h1>Kachatad Pantusen</h1>
+      <h1 >Kachatad Pantusen</h1>
       <p class="subtitle">Senior at Carnegie Mellon University</p>
 
       <section class="bio">
