--- a/project.html
+++ b/project.html
@@ -1,5 +1,21 @@
-<html>
-    <body>
-        hi
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kachatad Pantusen</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<div class="topnav">
+  <!-- <a href="mailto:kachpantusen@gmail.com">email</a> -->
+  <a href="index.html">home</a>
+  <a href="cv.html">cv</a>
+  <a href="project.html" class="active">projects</a>
+</div>
+<body>
+
+  <main>
+
+  </main>
+</body>
 </html>
