--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,23 @@
-<html>
-    <body>
-        hi
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kachatad Pantusen</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<div class="topnav">
+  <a href="index.html">home</a>
+  <a href="cv.html" class="active">cv</a>
+  <a href="project.html">projects</a>
+</div>
+<body>
+
+  <main>
+    <h1>Education</h1>
+    <h1>Experience</h1>
+    <h1>Publication</h1>
+    <h1>Project</h1>
+  </main>
+</body>
 </html>
